# CompilerPROJ

./: .gitignore  CMakeLists.txt  CMakeSettings.json  GrammaAnalysis.sln  README.md  ReadMe.txt  TACompiler.sln  TACompiler.vcxproj  TACompiler.vcxproj.filters  lex.cpp  lex.h  main.cpp  test.cpp  test.txt  test_code.txt  test_lex.txt  test_lextree.txt
Debug/: TACompiler.ilk  TACompiler.vcxproj.FileListAbsolute.txt  vc142.idb
Debug/TACompiler.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TACompiler.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
GrammaAnalysis/: GrammaAnalysis.vcxproj  GrammaAnalysis.vcxproj.filters  codes.cpp  codes.h  execute.cpp  execute.h  gra.cpp  gra.h  include.h  lex.cpp  lex.h  main.cpp  symboltable.cpp  symboltable.h  tempfilename  tree.cpp  tree.h
TestCode/: PL0_cod_lex.txt
TestCodeV2/: PL0_code0.in  PL0_code1.in  PL0_code2.in  PL0_code3.in
src/: Iterpreter.cpp  Iterpreter.h  SyntaxAnal.cpp  SyntaxAnal.h  WordAnal.cpp  WordAnal.h  defines.cpp  defines.h  graph.cpp  graph.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  targetver.h  vm.cpp  vm.h
www/: data.js  index.html
